[metadata]
name=asynccsv
version=1.0.1
url=https://github.com/soraxas/asynccsv
author=soraxas
author_email=tin.lai@sydney.edu.au
description=Async CSV performance logging
long_description_content_type=text/markdown
long_description=file:README.md
classifiers=
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
